# yandexliceumproject

./: MenuTest.py  entities.py  game_logic.py  maze.py  pyproject.toml  rendering.py
